# readnext

./: .coveragerc  .env_template  .gitignore  .pre-commit-config.yaml  404.html  LICENSE.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  tt.py
.github/workflows/: docs.yaml  pre-commit.yaml  tests.yaml
background/: index.html
customization/: index.html
docs/: background.md  customization.md  development.md  evaluation.md  index.md  inference.md  installation.md  overview.md  quick-guide.md  reproducibility.md  setup.md  user-guide.md
docs/assets/: hybrid-architecture.drawio
inference/: index.html
installation/: index.html
overview/: index.html
readnext/: __init__.py  config.py  readnext.py  test.py
readnext/data/: __init__.py  citation_models_features.py  config.py  data_split.py  merge_citations_cli_arguments.txt  preprocessing_utils.py  s1_read_d3_documents_chunks.py  s2_preprocess_documents_chunks.py  s3_merge_labels_chunks.py  s4_combine_documents_labels_chunks.py  s5_read_d3_authors.py  s6_merge_authors.py  s7_merge_citations.py  s8_combine_documents_authors_labels_citations_chunks.py  s9_filter_most_cited_documents.py  semanticscholar.py
readnext/evaluation/: __init__.py  citation_models.py  metrics.py  model_scorer.py  pairwise_scores.py  run_component_evaluation.py  run_evaluation.py  run_hybrid_evaluation.py
readnext/inference/: __init__.py  constructor.py  constructor_plugin.py  constructor_plugin_seen.py  constructor_plugin_unseen.py  constructor_plugin_unseen_language_models.py  document_identifier.py  features.py  inference_data.py  inference_data_attribute_getter.py  inference_data_constructor.py  inference_new_paper.py  inference_new_paper_citation.py  inference_new_paper_language.py  input_converter.py  lookup_existing.py
readnext/modeling/: __init__.py  config.py  constructor.py  constructor_citation.py  constructor_language.py  constructor_plugin.py  document_data.py  document_info.py  embedder.py  model_data.py  model_data_constructor.py  model_data_constructor_plugin.py  tokenizer.py
readnext/scripts/: vici.py
readnext/utils/: __init__.py  aliases.py  convert_id_urls.py  decorators.py  dummy_defaults.py  io.py  logging.py  preprocessing.py  progress_bar.py  protocols.py  repr.py  rich_progress_bars.py  slicing.py  testing.py  torch_device.py  utils.py
reproducibility/: index.html
search/: search_index.json
setup/: index.html
static/: hybrid-architecture.drawio
tests/: conftest.py  mocks.py  save_test_data.py  store_test_data.py  test_dummy.py  test_readnext.py
tests/config/: test_config.py
tests/data/: test_bert_cosine_similarities.parquet  test_bert_cosine_similarities_most_cited.parquet  test_bert_cosine_similarities_most_cited.pkl  test_bert_embeddings.parquet  test_bert_embeddings_mapping_most_cited.pkl  test_bert_embeddings_most_cited.parquet  test_bert_embeddings_most_cited.pkl  test_bert_tokenized_abstracts.parquet  test_bert_tokenized_abstracts_mapping_most_cited.pkl  test_bibliographic_coupling_scores.parquet  test_bibliographic_coupling_scores_most_cited.parquet  test_bibliographic_coupling_scores_most_cited.pkl  test_bm25_cosine_similarities.parquet  test_bm25_cosine_similarities_most_cited.parquet  test_bm25_cosine_similarities_most_cited.pkl  test_bm25_embeddings.parquet  test_bm25_embeddings_mapping_most_cited.pkl  test_bm25_embeddings_most_cited.parquet  test_co_citation_analysis_scores.parquet  test_co_citation_analysis_scores_most_cited.parquet  test_co_citation_analysis_scores_most_cited.pkl  test_data_mimics_real_data.py  test_documents_authors_labels_citations_most_cited.pkl  test_documents_data.parquet  test_documents_frame.parquet  test_documents_frame.py  test_embeddings.py  test_embeddings_frames.py  test_fasttext_cosine_similarities.parquet  test_fasttext_cosine_similarities_most_cited.parquet  test_fasttext_cosine_similarities_most_cited.pkl  test_fasttext_embeddings.parquet  test_fasttext_embeddings_mapping_most_cited.pkl  test_fasttext_embeddings_most_cited.parquet  test_fasttext_embeddings_most_cited.pkl  test_glove_cosine_similarities.parquet  test_glove_cosine_similarities_most_cited.parquet  test_glove_cosine_similarities_most_cited.pkl  test_glove_embeddings.parquet  test_glove_embeddings_most_cited.parquet  (+39 more)
tests/evaluation/: test_average_precision.py  test_cosine_similarity.py  test_count_common_citations.py  test_count_common_references.py  test_count_unique_labels.py  test_feature_weights.py  test_hybrid_score.py  test_hybrid_scorer.py  test_mean_average_precision.py  test_model_scorer.py  test_precision.py
tests/fixtures/: attribute_getter.py  attribute_getter_seen.py  attribute_getter_unseen.py  config.py  dummies.py  embedder.py  evaluation.py  hybrid_scorer.py  inference_data.py  inference_data_constructor.py  inference_data_constructor_plugin.py  inference_data_constructor_plugin_seen.py  inference_data_constructor_plugin_unseen.py  inference_data_constructor_seen.py  inference_data_constructor_unseen.py  inference_data_input_converter.py  inference_data_seen.py  inference_data_unseen.py  input_converter.py  language_models.py  mocks.py  model_data.py  model_data_citation.py  model_data_constructor.py  model_data_constructor_citation.py  model_data_constructor_language.py  model_data_constructor_plugin.py  model_data_language.py  model_scorer.py  precompute_scores.py  readnext.py  real_data.py  semanticscholar.py  test_data.py  tokenizer.py  toy_data.py
tests/inference/: test_inference_data_constructor.py  test_inference_data_constructor_plugin.py  test_input_converter.py
tests/language_models/: test_algorithm_bm25.py  test_algorithm_tfidf.py  test_embedder.py  test_embedder_tfidf.py  test_embedders_gensim.py  test_embedders_torch.py  test_load_language_models.py  test_tokenizer_spacy.py  test_tokenizer_torch.py  test_tokenizers_tensor.py
tests/modeling/: test_document_info.py  test_model_choice.py  test_model_data_constructor.py
tests/test_algorithms/: test_bm25.py  test_tfidf.py
tests/test_config/: test_config.py
tests/test_data/: conftest.py  (+13 more)
(+277 files in other folders)
